--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
       </div>
     </section>
 
-    <section id="projectsection">
+   <section id="projectsection">
       <div class="p-5 text-center rounded-3">
         <div><h1 class="mb-2">My Projects</h1></div>
-        <div class="container mt-5">
+        <div class="container mt-5 rounded-3" style="background-color: #0C134F;">
           <div class="d-flex justify-content-evenly">
-            <p>
+            <p style="color: #D4ADFC;">
               Here is a <span><a href="https://github.com/mukeshr4801">link</a></span> to my github portfolio, check it out!!!
             </div>
           </div>
